--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ venv
 __pycache__
 
 .DS_Store
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
