--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-click==8.1.3
+click==8.1.7
 Flask==3.0.2
 Flask-MySQLdb==2.0.0
+gunicorn==22.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.1
@@ -8,5 +9,6 @@ mysqlclient==2.2.4
 python-dotenv==1.0.1
 PyYAML==6.0.1
 requests==2.32.3
+setuptools==69.0.2
 six==1.16.0
 Werkzeug==3.0.1
